--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-numpy==1.25.2
-matplotlib==3.4.3
-scikit-learn==0.24.2
-Pillow==9.5.0
-streamlit==1.25.0
-tensorflow==2.6.0
-keras==2.6.0
+numpy
+matplotlib
+scikit-learn
+Pillow
+tensorflow
+streamlit
